--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jogi Suda Neto"
-  avatar           : "profile.png"
+  avatar           : "jogi.jpg"
   bio              : "Researcher & Machine Learning Engineer"
   location         : Brazil
   employer         :
