--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jogi Suda"
 title_separator          : "-"
 name                     : &name "Jogi Suda"
-description              : &description "Researcher & Machine Learning Engineer AA"
+description              : &description "Researcher & Machine Learning Engineer"
 url                      : https://jogisuda.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
