--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jogi Suda"
+title                    : "Jogi Suda Neto"
 title_separator          : "-"
 name                     : &name "Jogi Suda"
 description              : &description "MSc Student Researcher & Machine Learning Engineer"
