--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jogi Suda Neto"
 title_separator          : "-"
 name                     : &name "Jogi Suda"
-description              : &description "Co-founder @ QuaTI and Machine Learning Engineer"
+description              : &description "PhD student @ CERN"
 url                      : https://jogisuda.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jogi Suda Neto, MSc"
+  name             : "Jogi Suda Neto"
   avatar           : "jogi.jpg"
-  bio              : "Co-founder @ QuaTI and Machine Learning Engineer"
+  bio              : "PhD student @ CERN"
   location         : Brazil
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
